gcc-14.2.0/gcc/testsuite/gdc.test/fail_compilation/imports/issue21295dtemplate.d
version https://git-lfs.github.com/spec/v1
oid sha256:89362f6605230e95ebdab21989905711ad5b6b510a63b7037aafb46ed49300d9
size 109
